// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audio renders the component 1`] = `
<audio
  controls={true}
  data-autoplay={true}
  onCanPlay={[Function]}
/>
`;

exports[`Audio renders the component 2`] = `
<audio
  controls={false}
  data-autoplay={false}
  onCanPlay={[Function]}
/>
`;
